--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <img class="logo" src="images/logo.jpeg" alt="Artic Monkeys">
       <div class="player-control">
         <h1 class="player-title">Artic Monkeys</h1>
-        <span class="material-symbols-outlined">skip_previous</span> 
-        <span class="material-symbols-outlined">play_arrow</span> 
-        <span class="material-symbols-outlined">pause</span> 
-        <span class="material-symbols-outlined">skip_next</span> 
+        <button id="previous" class="btn"><span class="material-symbols-outlined">skip_previous</span></button> 
+        <button id="play" class="btn"><span class="material-symbols-outlined">play_arrow</span></button>
+        <button id="pause" class="btn"><span class="material-symbols-outlined">pause</span></button>
+        <button id="next" class="btn"><span class="material-symbols-outlined">skip_next</span></button>
       </div>
     </div>
     <div class="popular">
