new: scriptjs and data structure

--- a/index.html
+++ b/index.html
@@ -20,23 +20,25 @@
     </div>
     <div class="popular">
       <h2 class="popular-title">Popular</h2>
-      <div class="music">
-        <p id="music-id">1</p>
-        <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys">
-        <p id="music-name">Nome da musica</p>
-      </div>
-      <div class="music">
-        <p id="music-id">2</p>
-        <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys">
-        <p id="music-name">Nome da musica</p>
-      </div>
-      <div class="music">
-        <p id="music-id">3</p>
-        <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys">
-        <p id="music-name">Nome da musica</p>
-      </div>
+
+      <!-- <div class="music"> -->
+      <!--   <p id="music-id">1</p> -->
+      <!--   <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys"> -->
+      <!--   <p id="music-name">Nome da musica</p> -->
+      <!-- </div> -->
+
+      <!-- <div class="music"> -->
+      <!--   <p id="music-id">2</p> -->
+      <!--   <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys"> -->
+      <!--   <p id="music-name">Nome da musica</p> -->
+      <!-- </div> -->
+      <!-- <div class="music"> -->
+      <!--   <p id="music-id">3</p> -->
+      <!--   <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys"> -->
+      <!--   <p id="music-name">Nome da musica</p> -->
+      <!-- </div> -->
     </div>
 
-  
+    <script src="js/script.js"></script> 
   </body>
 </html>
