--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <button id="next" class="btn"><span class="material-symbols-outlined">skip_next</span></button>
       </div>
     </div>
-    <div class="popular">
+    <div id="divPopular" class="popular">
       <h2 class="popular-title">Popular</h2>
 
       <!-- <div class="music"> -->
-      <!--   <p id="music-id">1</p> -->
+      <!--   <p>1</p> -->
       <!--   <img class="music-logo" src="images/logo.jpeg" alt="Artic Monkeys"> -->
       <!--   <p id="music-name">Nome da musica</p> -->
       <!-- </div> -->
